--- a/Test-Work.csproj
+++ b/Test-Work.csproj
@@ -87,6 +87,7 @@
     <Reference Include="UIAutomationTypes" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
